# discussWithGrokMCP

./: .env.example  .gitignore  .mcp.json.bak  .mcp.json.example  CHANGELOG.md  CLAUDE.md  IMPROVEMENT_SPEC.md  LICENSE  MCP_GROK_SERVER_SPEC.md  README.md  SPEC_SUMMARY.md  claude_desktop_config.json.example  demo_context_loader.py  enhanced_mcp.py  grok_mcp.py  mcp_sdk_server.py  mcp_server.py  mcp_stdio_server.py  monitor.py  pyproject.toml  repair_session.py  run-mcp.sh  run_mcp_server.sh  run_tests.py  server.py  simple_mcp.py  test_2m_tokens.py  test_all_changes.py  test_auto_repair.py  test_direct.py  test_discuss_with_files.py  test_enhanced.py  test_integration.py  test_mcp_sdk.py  test_mcp_server.py  test_memory_optimizations.py  test_model_context_fix.py  test_monitor.py  test_pagination_fix.py  test_pagination_model_fix.py  (+4 more)
.claude/: settings.local.json.bak
grok_discussions/: metadata.json
lib/: __init__.py  baseline_generator.py  context_analyzer.py  grok_client.py  session_manager.py  storage_manager.py
logs/: .392d9401f78c04f9df6994ab4e0791e2884cbbe9-audit.json.bak  .f9ae428259cf77c000b67f5eec0aebc4437dd76f-audit.json.bak
test_sessions/: 17288e57-bdd7-4e84-b4db-6b6d3098eb71.json.bak  3dc2a2ba-e1e0-4e97-9fd9-fccfe005d75a.json.bak  3e959bc4-8bd8-40fe-b00a-16e02fcbd673.json  3fbd3360-d03b-4fdf-b90c-9bcf2c82602f.json  50cb6cf7-a1ac-45b5-8a34-5d9925232b8a.json  539d5da3-f282-4ff5-b893-df9e33777aff.json.bak  61d2a454-291c-4219-bd41-efa17e6966ee.json  a26009f7-f327-42b9-807f-d20fddc01d0b.json.bak  a9cfa459-5070-47df-96b8-bc43dcf4d268.json.bak  (+3 more)
(+31 files in other folders)
